--- a/app/index.html
+++ b/app/index.html
@@ -36,8 +36,30 @@
     <link rel="canonical" href="http://www.example.com/">
     -->
 
+
+    <!-- Material Design fonts -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+
     <!-- Material Design icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+
+    <!-- Bootstrap -->
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
+
+
+    <!-- Bootstrap Material Design -->
+    <link href="styles/bootstrap-material-design.css" rel="stylesheet">
+    <link href="styles/ripples.min.css" rel="stylesheet">
+
+    <!-- Dropdown.js -->
+    <link href="http://cdn.rawgit.com/FezVrasta/dropdown.js/master/jquery.dropdown.css" rel="stylesheet">
+
+
+    <!-- jQuery -->
+    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+
 
 
     <!-- Material Design Lite page styles:
@@ -58,16 +80,13 @@
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-          <h3>Web Starter Kit</h3>
+          <h3>Snippetz</h3>
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
         <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
           <a href="#overview" class="mdl-layout__tab is-active">Overview</a>
           <a href="#features" class="mdl-layout__tab">Features</a>
-          <a href="#features" class="mdl-layout__tab">Details</a>
-          <a href="#features" class="mdl-layout__tab">Technology</a>
-          <a href="#features" class="mdl-layout__tab">FAQ</a>
           <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
             <i class="material-icons" role="presentation">add</i>
             <span class="visuallyhidden">Add</span>
@@ -76,6 +95,10 @@
       </header>
       <main class="mdl-layout__content">
         <div class="mdl-layout__tab-panel is-active" id="overview">
+
+
+
+
           <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
             <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">
               <i class="material-icons">play_circle_filled</i>
@@ -156,6 +179,158 @@
               <li class="mdl-menu__item">Dolor</li>
             </ul>
           </section>
+
+
+
+
+
+
+
+
+
+
+          <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+            <div class="mdl-card mdl-cell mdl-cell--12-col">
+              <div class="mdl-card__supporting-text">
+                <h4>Technology</h4>
+                Dolore ex deserunt aute fugiat aute nulla ea sunt aliqua nisi cupidatat eu. Nostrud in laboris labore nisi amet do dolor eu fugiat consectetur elit cillum esse. Pariatur occaecat nisi laboris tempor laboris eiusmod qui id Lorem esse commodo in. Exercitation aute dolore deserunt culpa consequat elit labore incididunt elit anim.
+
+
+
+
+<form class="bs-component">
+          <div class="form-group label-floating is-empty">
+            <label class="control-label" for="focusedInput1">Write something to make the label float</label>
+            <input class="form-control" id="focusedInput1" type="text">
+          </div>
+
+          <div class="form-group label-floating is-empty">
+            <label class="control-label" for="focusedInput2">Focus to show the help-block</label>
+            <input class="form-control" id="focusedInput2" type="text">
+            <p class="help-block">You should really write something here</p>
+          </div>
+
+          <div class="form-group is-empty">
+            <label class="control-label" for="disabledInput">Disabled input</label>
+            <input class="form-control" id="disabledInput" type="text" placeholder="Disabled input here..." disabled="">
+          </div>
+
+          <div class="form-group has-warning is-empty">
+            <label class="control-label" for="inputWarning">Input warning</label>
+            <input type="text" class="form-control" id="inputWarning">
+          </div>
+
+          <div class="form-group has-error is-empty">
+            <label class="control-label" for="inputError">Input error</label>
+            <input type="text" class="form-control" id="inputError">
+          </div>
+
+          <div class="form-group has-success is-empty">
+            <label class="control-label" for="inputSuccess">Input success</label>
+            <input type="text" class="form-control" id="inputSuccess">
+          </div>
+
+          <div class="form-group form-group-lg is-empty">
+            <label class="control-label" for="inputLarge">Large input</label>
+            <input class="form-control" type="text" id="inputLarge">
+          </div>
+
+          <div class="form-group is-empty">
+            <label class="control-label" for="inputDefault">Default input</label>
+            <input type="text" class="form-control" id="inputDefault">
+          </div>
+
+          <div class="form-group form-group-sm is-empty">
+            <label class="control-label" for="inputSmall">Small input</label>
+            <input class="form-control" type="text" id="inputSmall">
+          </div>
+
+          <div class="form-group is-empty">
+            <label class="control-label" for="addon1">Default label w/input addons</label>
+            <div class="input-group">
+              <span class="input-group-addon">$</span>
+              <input type="text" id="addon1" class="form-control">
+              <span class="input-group-btn">
+                  <button class="btn btn-primary" type="button">Button</button>
+              </span>
+            </div>
+          </div>
+
+          <div class="form-group label-floating is-empty">
+            <div class="input-group">
+              <span class="input-group-addon">$</span>
+              <label class="control-label" for="addon3a">Floating label w/2 addons</label>
+              <input type="text" id="addon3a" class="form-control">
+              <p class="help-block">The label is inside the <code>input-group</code> so that it is positioned properly as a placeholder.</p>
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-fab btn-fab-mini">
+                  <i class="material-icons">send</i>
+                </button>
+              </span>
+            </div>
+          </div>
+
+          <div class="form-group label-floating is-empty">
+
+            <label class="control-label" for="addon2">Floating label w/right addon</label>
+            <div class="input-group">
+              <input type="text" id="addon2" class="form-control">
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-fab btn-fab-mini">
+                  <i class="material-icons">functions</i>
+                </button>
+              </span>
+            </div>
+          </div>
+
+          <div class="form-group is-empty is-fileinput">
+            <input type="file" id="inputFile4" multiple="">
+            <div class="input-group">
+              <input type="text" readonly="" class="form-control" placeholder="Placeholder w/file chooser...">
+                <span class="input-group-btn input-group-sm">
+                  <button type="button" class="btn btn-fab btn-fab-mini">
+                    <i class="material-icons">attach_file</i>
+                  </button>
+                </span>
+            </div>
+          </div>
+
+
+        </form>
+
+
+              
+
+              </div>
+              <div class="mdl-card__actions">
+                <a href="#" class="mdl-button">Read our features</a>
+              </div>
+            </div>
+            <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="btn3">
+              <i class="material-icons">more_vert</i>
+            </button>
+            <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right" for="btn3">
+              <li class="mdl-menu__item">Lorem</li>
+              <li class="mdl-menu__item" disabled>Ipsum</li>
+              <li class="mdl-menu__item">Dolor</li>
+            </ul>
+          </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
           <section class="section--footer mdl-color--white mdl-grid">
             <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone">
               <div class="section__circle-container__circle mdl-color--accent section__circle--big"></div>
