Fixed logo styling on home screen

--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,9 @@
 
                   <div class="logo-holder">
                     <!-- shadow 009BD9 -->
-                    <object type="image/svg+xml" data="images/snippitz.svg"></object>
+                    <span class="logo-circle">
+                      <object type="image/svg+xml" data="images/snippitz.svg"></object>
+                    </span>
                   </div>
 
 
