--- a/app/topics_1.html
+++ b/app/topics_1.html
@@ -165,7 +165,7 @@
                         </ul>
 
                         <ul class="topics-list list-unstyled sports">
-                          <li class="bk-white font-black" style="background:#c6b298">
+                          <li class="bk-white font-black" styler="background:#c6b298">
                                 <object type="image/svg+xml" data="images/sports.svg"></object>
                                 Sports
                                 <span class="glyphicon glyphicon-ok hidden">
