--- a/app/create-account.html
+++ b/app/create-account.html
@@ -163,8 +163,8 @@
 
 
                           <div class="create-account-holder signin-holder btn-holder text-center">
-                              <a href="/create-account.html" class="btn font-blue btn-link">Cancel<div class="ripple-container"></div></a>
-                              <a href="/topics_1.html" class="btn btn-raised btn-default btn-sm bk-blue font-white">Create Account<div class="ripple-container"></div></a>
+                              <a href="" class="btn font-blue btn-link">Cancel<div class="ripple-container"></div></a>
+                              <a href="topics_1.html" class="btn btn-raised btn-default btn-sm bk-blue font-white">Create Account<div class="ripple-container"></div></a>
                           </div>
 
                         </form>
