--- a/app/topics_1.html
+++ b/app/topics_1.html
@@ -139,7 +139,7 @@
               <div class="row">
                     <div class="col-md-12 topics">
       
-                        <div style="padding-top:5px" class="font-blue pull-right"><a class="font-blue pull-right" href="/duration.html">NEXT</a></div>
+                        <div style="padding-top:5px" class="font-blue pull-right"><a class="font-blue pull-right" href="duration.html">NEXT</a></div>
                         <h4 class="header" style="margin-bottom:40px;">Topics</h4>
                         
                         <ul class="topics-list list-unstyled news">
