Removed relative links and hacked build

--- a/app/duration.html
+++ b/app/duration.html
@@ -142,7 +142,7 @@
               <div class="row">
                     <div class="col-md-12 topics">
       
-                        <div style="padding-top:5px" class="font-blue pull-right"><a class="font-blue pull-right" href="/player.html">DONE</a></div>
+                        <div style="padding-top:5px" class="font-blue pull-right"><a class="font-blue pull-right" href="player.html">DONE</a></div>
                         <h4 class="header" style="margin-bottom:40px;">Playlist Time</h4>
                         
 
