--- a/app/player.html
+++ b/app/player.html
@@ -155,7 +155,7 @@
                                     file: "audio/clark_college_fund.mp3",
                                     thumb: "images/clark.jpg",
                                     category_thumb: "images/wallet.svg",
-                                    trackName: "College Fund Advise",
+                                    trackName: "College Fund Advice",
                                     trackArtist: "Clark Howard",
                                     trackAlbum: "Single",
                                   }]
