--- a/app/index.html
+++ b/app/index.html
@@ -97,8 +97,8 @@
 
 
                   <div class="signin-holder btn-holder text-center">
-                      <a href="create-account.html" class="btn btn-raised btn-default btn-sm font-blue">Create an account<div class="ripple-container"></div></a>
-                      <a href="javascript:void(0)" class="btn btn-raised btn-default btn-sm font-blue">Login with Facebook<div class="ripple-container"></div></a>
+                      <a href="create-account.html" class="btn btn-raised btn-default font-blue">Create an account<div class="ripple-container"></div></a>
+                      <a href="javascript:void(0)" class="btn btn-raised btn-default font-blue">Login with Facebook<div class="ripple-container"></div></a>
                   </div>
 
 
