Increased loading font size

--- a/app/loading.html
+++ b/app/loading.html
@@ -144,12 +144,14 @@
       
                         <img src="images/squirrel.gif" style="border:5px #fff solid" />
 
-                        <p class="text-left" style="padding: 20px">One minute while we fetch your audio and build your playlist...</p>
+                        <h4 style="padding: 20px">One minute while we fetch your audio and build your playlist...</h4>
 
                         <script>
+                          /*
                           setTimeout(function() {
                               window.location.href = "player.html";
                           }, 2800);
+                          */
                         </script>
 
 
